Make Java tests work for Sum of Divisibles